--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+:root {
+  --theme-primary: green;
+  --theme-seondary:rgb(188, 234, 188);
+  --Ai-color:#9867C5;
+}
+
+
 *{
   margin:0;
   padding: 0;
@@ -5,6 +12,8 @@
 }
 .container{
   display: flex;
+  margin: 0px !important;
+  padding: 0px !important;
 }
 main{
   width: 100%;
@@ -14,7 +23,8 @@ main{
   background: rgb(250, 245, 245);
   color: rgb(96, 145, 105);
   height: 100vh;
-  width: 300px;
+  width: 400px;
+  /* margin: 0px; */
 }
 .top_section{
   display: flex;
@@ -25,7 +35,7 @@ main{
   font-size: 40px;
 }
 .bar{
-  display: flex;
+  display: none;
   font-size: 25px;
   margin-left: 40px;
   color: rgb(30, 33, 30);
@@ -38,14 +48,28 @@ main{
   transition: all 0.5s;
 }
 .link:hover{
-  background: rgb(188, 234, 188);
+  background: var(--theme-seondary);
   color: darkblue;
   transition: all 0.5s;
 }
 .active{
-  background: rgb(188, 234, 188);
+  background: var(--theme-seondary);
   color: darkblue;
 }
 .icon,.link_text{
   font-size:18px;
+}
+
+.theme-bg-secondary {
+  background: var(--theme-seondary) !important;
+}
+
+.theme-bg-primary {
+  background: var(--theme-primary) !important;
+}
+
+.roomfac {
+  display: flex;
+  widtH: 60%;
+  margin: auto;
 }
