--- a/Backend/views/createQuizzes/edit.ejs
+++ b/Backend/views/createQuizzes/edit.ejs
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="eng">
-    <head>
-        <meta charset="UTF-8">
-        <title>Edit Quiz</title>
-    </head>
-    <body>
-        <form action="/createQuiz/<%=quiz.id %>?_method=PUT" method="POST">
+   
+   <%layout("layouts/boilerplate.ejs")%>
+
+   
+   <form action="/createQuiz/<%=quiz.id %>?_method=PUT" method="POST">
             <div>
                 <label for="quizId">Enter quiz ID</label>
                 <input type="text" name="createQuiz[quizId]" id="quizId" value="<%=quiz.quizId%>">
@@ -30,9 +27,6 @@
     
         </form>   
         
-        
-        </body>
     <footer>
-        <a href="/createQuiz,<%=quiz.id%>">Back</a>
+        <a href="/createQuiz/<%=quiz.id%>">Back</a>
     </footer>
-</html>
