--- a/Backend/views/createQuizzes/new.ejs
+++ b/Backend/views/createQuizzes/new.ejs
@@ -1,11 +1,4 @@
-
-<!DOCTYPE html>
-<html lang="eng">
-    <head>
-        <meta charset="UTF-8">
-        <title>New Quiz</title>
-    </head>
-    <body>
+<%layout("layouts/boilerplate.ejs")%>
     <form action="/createQuiz" method="POST">
         <div>
             <label for="quizId">Enter quiz ID</label>
@@ -32,8 +25,6 @@
 
     </form>   
     
-    </body>
     <footer>
         <a href="/createQuiz">Back</a>
     </footer>
-</html>
