--- a/Backend/views/createQuizzes/show.ejs
+++ b/Backend/views/createQuizzes/show.ejs
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html lang="eng">
-    <head>
-        <meta charset="UTF-8">
-        <title>KwizBuzz</title>
-    </head>
-    <body>
+<%layout("layouts/boilerplate.ejs")%>
         <h1><%=quiz.quizId%></h1>
         <h3><i><%=quiz.quizDescription%></i></h3>
-    </body>
+        <h3><i><%=quiz.quizQuestion%></i></h3>
+    
     <footer>
        <p> <a href="/createQuiz/<%=quiz.id%>/edit">Edit</a></p>
+
+       <p> <a href="/createQuiz/<%=quiz.id%>/addQ">Add Question</a></p>
 
        <form action="/createQuiz/<%=quiz.id%>?_method=DELETE" method="POST">
         <button>Delete</button>
@@ -17,4 +14,3 @@
        <br>
         <a href="/createQuiz">Back</a>
     </footer>
-</html>
