--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,10 @@
   --theme-primary: green;
   --theme-seondary:rgb(188, 234, 188);
   --Ai-color:#9867C5;
+  --base-primary:rgb(250, 245, 245);
 }
 
+/* theme-bg-primary outline-none border-0 */
 
 *{
   margin:0;
@@ -25,6 +27,9 @@ main{
   height: 100vh;
   width: 400px;
   /* margin: 0px; */
+}
+.theme-bg-base{
+  background: var(--base-primary) !important;
 }
 .top_section{
   display: flex;
